--- a/tips-for-artistic-people/index.html
+++ b/tips-for-artistic-people/index.html
@@ -384,7 +384,7 @@ Performance optimized by W3 Total Cache. Learn more: https://www.boldgrid.com/w3
 Page Caching using disk: enhanced 
 Lazy Loading
 Minified using disk
-Database Caching 5/59 queries in 0.044 seconds using disk (Request-wide modification query)
+Database Caching 12/45 queries in 0.021 seconds using disk
 
-Served from: localhost @ 2020-06-17 23:22:08 by W3 Total Cache
+Served from: localhost @ 2020-06-17 23:37:37 by W3 Total Cache
 -->
