--- a/portfolio/drone-for-capture/index.html
+++ b/portfolio/drone-for-capture/index.html
@@ -386,7 +386,7 @@ Performance optimized by W3 Total Cache. Learn more: https://www.boldgrid.com/w3
 Page Caching using disk: enhanced 
 Lazy Loading
 Minified using disk
-Database Caching 1/44 queries in 0.043 seconds using disk (Request-wide modification query)
+Database Caching using disk
 
-Served from: localhost @ 2020-06-17 23:21:51 by W3 Total Cache
+Served from: localhost @ 2020-06-17 23:37:23 by W3 Total Cache
 -->
