--- a/tips-for-artistic-people-2/index.html
+++ b/tips-for-artistic-people-2/index.html
@@ -387,7 +387,7 @@ Performance optimized by W3 Total Cache. Learn more: https://www.boldgrid.com/w3
 Page Caching using disk: enhanced 
 Lazy Loading
 Minified using disk
-Database Caching 2/43 queries in 0.040 seconds using disk (Request-wide modification query)
+Database Caching 1/33 queries in 0.019 seconds using disk
 
-Served from: localhost @ 2020-06-17 23:22:07 by W3 Total Cache
+Served from: localhost @ 2020-06-17 23:37:36 by W3 Total Cache
 -->
